// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Card Basic Card 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 gwDvCn"
>
  <div
    className="Cardstories__StyledContent-eexhxe-0 kGEqlI"
  >
    A Card as a div containing content
  </div>
</div>
`;

exports[`Storyshots Atoms | Card Card rendered with different html tags 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Section
    </div>
    <div>
      <section
        className="Card__StyledCard-sc-1e5czjc-0 gwDvCn"
      >
        <div
          className="Cardstories__StyledContent-eexhxe-0 kGEqlI"
        >
          A Card as a section containing content
        </div>
      </section>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Article
    </div>
    <div>
      <article
        className="Card__StyledCard-sc-1e5czjc-0 gwDvCn"
      >
        <div
          className="Cardstories__StyledContent-eexhxe-0 kGEqlI"
        >
          A Card as a article containing content
        </div>
      </article>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid CssGrid with custom gutter 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 kAoCvY"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa jZclqz"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa cSvSRX"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Top
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa cTgXiO"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa htfucg"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid CssGrid with custom templateColumns 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 htHwvF"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa jZclqz"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa cSvSRX"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Top
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa cTgXiO"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa htfucg"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid CssGrid with different layouts for different screen sizes 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 jIOgaG"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa dSufaw"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa emIQMK"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Top
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa czSiSC"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa dQUeqc"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid CssGrid with object as gutter and custom sized columns 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 fvIXEW"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa dBpfEh"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Left
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa eHGQpe"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Top
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa ezZumu"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa cRNBno"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Messages
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa jODgqu"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Order
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa jHKUNH"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Sidebar
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | CssGrid Simple CssGrid 1`] = `
<div
  className="CssGrid__StyledDiv-bu5cxy-0 dmRbLA"
>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa bRGSev"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Header
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa ioWuYc"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Content
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa YvQdv"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Menu
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa eKmgOm"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Ads
    </div>
  </div>
  <div
    className="CssGrid__RawCssGridItem-bu5cxy-1 sc-bdVaJa hPuVlu"
  >
    <div
      className="CssGridstories__StyledContent-sc-1pgrjiv-0 iFWmiS"
    >
      Footer
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Currency Primary default 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 cmCWWJ"
>
  SEK 234,234.00
</span>
`;

exports[`Storyshots Atoms | Currency Secondary default 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 laXMaY"
>
  SEK 234,234.00
</span>
`;

exports[`Storyshots Atoms | Currency Tertiary default 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 kBKleW"
>
  SEK 234,234.00
</span>
`;

exports[`Storyshots Atoms | Currency Title1 default 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 iUYKst"
>
  SEK 234,234.00
</span>
`;

exports[`Storyshots Atoms | Currency Title3 default 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 joblfr"
>
  SEK 234,234.00
</span>
`;

exports[`Storyshots Atoms | Development Primary 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Positive value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 gcIsAz"
      >
        ▲
        +
        5.4
        %
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Zero value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 cmCWWJ"
      >
        0
        0
        %
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Negative value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 hCpHGw"
      >
        ▼
        -2.1
        %
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Development Secondary 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Positive value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 bmOtmq"
      >
        ▲
        +
        5.4
        %
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Zero value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 laXMaY"
      >
        0
        0
        %
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Negative value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 jWluYu"
      >
        ▼
        -2.1
        %
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Development Tertiary 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Positive value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 ekeaEF"
      >
        ▲
        +
        5.4
        %
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Zero value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 kBKleW"
      >
        0
        0
        %
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Negative value
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 eumSjM"
      >
        ▼
        -2.1
        %
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox Flexbox default 1`] = `
<div
  className="FlexboxContainer__StyledFlexbox-sc-1efwhdg-0 kvhUqX"
>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithHorisontalGutter-uyxq1j-1 flIvvs"
    size={3}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 1
    </div>
  </div>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithHorisontalGutter-uyxq1j-1 gLvGZa"
    size={6}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 2
    </div>
  </div>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithHorisontalGutter-uyxq1j-1 flIvvs"
    size={3}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 3
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox Flexbox with custom gutter 1`] = `
<div
  className="FlexboxContainer__StyledFlexbox-sc-1efwhdg-0 gNrjJB"
>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithHorisontalGutter-uyxq1j-1 gbPXqp"
    size={6}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 1
    </div>
  </div>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithHorisontalGutter-uyxq1j-1 gbPXqp"
    size={6}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 2
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Flexbox Flexbox with direction: column 1`] = `
<div
  className="FlexboxContainer__StyledFlexbox-sc-1efwhdg-0 jmuCEd"
  direction="column"
>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithVerticalGutter-uyxq1j-2 goOQKU"
    order={2}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 1
    </div>
  </div>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithVerticalGutter-uyxq1j-2 epkXgE"
    order={1}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 2
    </div>
  </div>
  <div
    className="FlexboxItem__StyledItem-uyxq1j-0 FlexboxItem__StyledItemWithVerticalGutter-uyxq1j-2 hCMvsg"
    order={3}
  >
    <div
      className="Flexboxstories__StyledContent-sc-103j0u1-0 iVuNfs"
    >
      Col 3
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Icon Available icons 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      ChevronDown
    </div>
    <div>
      <svg
        aria-hidden="true"
        className="IconBase__StyledIconBase-sc-10cbji3-0 glOwBq"
        focusable="false"
        role="presentation"
        size={5}
        viewBox="0 0 24 24"
      >
        <polygon
          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
        />
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      ChevronUp
    </div>
    <div>
      <svg
        aria-hidden="true"
        className="IconBase__StyledIconBase-sc-10cbji3-0 glOwBq"
        focusable="false"
        role="presentation"
        size={5}
        viewBox="0 0 24 24"
      >
        <polygon
          points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
          transform="rotate(-180 12 12)"
        />
      </svg>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      ArrowRight
    </div>
    <div>
      <svg
        aria-hidden="true"
        className="IconBase__StyledIconBase-sc-10cbji3-0 glOwBq"
        focusable="false"
        role="presentation"
        size={5}
        viewBox="0 0 24 24"
      >
        <polygon
          points="16.278 14 0 14 0 10 16.278 10 8.211 2 13.916 2 24 12 21.148 14.828 13.916 22 8.211 22"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Icon Default use 1`] = `
<svg
  aria-hidden="true"
  className="IconBase__StyledIconBase-sc-10cbji3-0 glOwBq"
  focusable="false"
  role="presentation"
  size={5}
  viewBox="0 0 24 24"
>
  <polygon
    points="16.278 14 0 14 0 10 16.278 10 8.211 2 13.916 2 24 12 21.148 14.828 13.916 22 8.211 22"
  />
</svg>
`;

exports[`Storyshots Atoms | Icon Different size and color 1`] = `
<svg
  aria-hidden="true"
  className="IconBase__StyledIconBase-sc-10cbji3-0 cFisAB"
  focusable="false"
  role="presentation"
  size={10}
  viewBox="0 0 24 24"
>
  <polygon
    points="16.278 14 0 14 0 10 16.278 10 8.211 2 13.916 2 24 12 21.148 14.828 13.916 22 8.211 22"
  />
</svg>
`;

exports[`Storyshots Atoms | List Basic ordered list 1`] = `
<ol
  className="List__StyledList-sc-67l9u3-0 wlTZH"
>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item 1
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item 2
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item 3
  </li>
</ol>
`;

exports[`Storyshots Atoms | List Basic unordered list 1`] = `
<ul
  className="List__StyledList-sc-67l9u3-0 wlTZH"
>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item
  </li>
</ul>
`;

exports[`Storyshots Atoms | ListItem Basic list item 1`] = `
<ul>
  <li
    className="ListItem__StyledListItem-pn91gs-0 LDMQb"
  >
    List item
  </li>
</ul>
`;

exports[`Storyshots Atoms | Media Basic usage 1`] = `
Array [
  <div
    className="Media__StyledDiv-sc-1dic02p-0 eEsbmZ"
  >
    I am only shown on screens smaller than medium size
  </div>,
  <div
    className="Media__StyledDiv-sc-1dic02p-0 idwWqU"
  >
    I am only shown between medium and large sizes
  </div>,
  <div
    className="Media__StyledDiv-sc-1dic02p-0 coUHet"
  >
    I am only shown on screens bigger than large size
  </div>,
]
`;

exports[`Storyshots Atoms | Separator Documentation 1`] = `null`;

exports[`Storyshots Atoms | Separator Separator default 1`] = `
<div
  className="Separatorstories__StyledContainer-sc-12j0h8a-0 ixCTfH"
>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 eEBmzS"
  />
</div>
`;

exports[`Storyshots Atoms | Separator Separator vertical 1`] = `
<div
  className="Separatorstories__StyledContainer-sc-12j0h8a-0 ixCTfH"
>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 ePNKxP"
  />
</div>
`;

exports[`Storyshots Atoms | Text Colors 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Default
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 cmCWWJ"
      >
        Default
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Color: text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 cmCWWJ"
      >
        Text
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Color: positive
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 gcIsAz"
      >
        Positive
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Color: negative
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 hCpHGw"
      >
        Negative
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Color: warning
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 kLDCRD"
      >
        Warning
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Color: cta
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 eEIqHm"
      >
        CTA
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Color: label
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 foWpFZ"
      >
        Label
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Text Primary 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Primary text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 cmCWWJ"
      >
        Primary text
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Primary bold text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 cHZfwv"
      >
        Primary bold text
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Primary extrabold text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 bnIaaO"
      >
        Primary extrabold text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Text Secondary 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Secondary text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 laXMaY"
      >
        Secondary text
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Secondary bold text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 gHlEVt"
      >
        Secondary bold text
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Secondary extrabold text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 iXItug"
      >
        Secondary extrabold text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Text Tertiary 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Tertiary text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 kBKleW"
      >
        Tertiary text
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Tertiary bold text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 lnwQxH"
      >
        Tertiary bold text
      </span>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Tertiary extrabold text
    </div>
    <div>
      <span
        className="Text__StyledText-sc-1974afi-0 bjBurG"
      >
        Tertiary extrabold text
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms | Text Title1 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 iUYKst"
>
  Title1 text
</span>
`;

exports[`Storyshots Atoms | Text Title3 1`] = `
<span
  className="Text__StyledText-sc-1974afi-0 joblfr"
>
  Title3 text
</span>
`;

exports[`Storyshots Display Documentation 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Vertical layout
    </div>
    <div>
      <div
        className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
        direction="column"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
          direction="row"
        >
          <div
            className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
          >
            Title 1
          </div>
          <div>
            <div>
              Component 1
            </div>
          </div>
        </div>
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
          direction="row"
        >
          <div
            className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
          >
            Title 2
          </div>
          <div>
            <div>
              Component 2
            </div>
          </div>
        </div>
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
          direction="row"
        >
          <div
            className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
          >
            Title 3
          </div>
          <div>
            <div>
              Component 3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Horizontal layout
    </div>
    <div>
      <div
        className="Display__StyledFlexDiv-sc-1yo6rmg-0 iahwSN"
        direction="row"
      >
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 buAJms"
          direction="column"
        >
          <div
            className="Display__DivWithBorder-sc-1yo6rmg-1 eVoBs"
          >
            Title 1
          </div>
          <div>
            <div>
              Component 1
            </div>
          </div>
        </div>
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 buAJms"
          direction="column"
        >
          <div
            className="Display__DivWithBorder-sc-1yo6rmg-1 eVoBs"
          >
            Title 2
          </div>
          <div>
            <div>
              Component 2
            </div>
          </div>
        </div>
        <div
          className="Display__StyledFlexDiv-sc-1yo6rmg-0 buAJms"
          direction="column"
        >
          <div
            className="Display__DivWithBorder-sc-1yo6rmg-1 eVoBs"
          >
            Title 3
          </div>
          <div>
            <div>
              Component 3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Avatar Basic usage 1`] = `
<div
  className="Avatar__StyledDiv-a8mb4w-0 igAJTE"
>
  <span
    className="Text__StyledText-sc-1974afi-0 cEGWcE"
  >
    ASK
  </span>
</div>
`;

exports[`Storyshots Molecules | Button Button primary with size modified 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 iahwSN"
  direction="row"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 buAJms"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 eVoBs"
    >
      Small
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 jjxzVi"
        onClick={[Function]}
        size="s"
        type="button"
      >
        Small
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 buAJms"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 eVoBs"
    >
      Medium
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 dugpYI"
        onClick={[Function]}
        size="m"
        type="button"
      >
        Medium
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 buAJms"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 eVoBs"
    >
      Large
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 byIuXa"
        onClick={[Function]}
        size="l"
        type="button"
      >
        Large
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button secondary with size modified 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 iahwSN"
  direction="row"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 buAJms"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 eVoBs"
    >
      Small
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kZIyEw"
        onClick={[Function]}
        size="s"
        type="button"
      >
        Small
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 buAJms"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 eVoBs"
    >
      Medium
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kEUmvh"
        onClick={[Function]}
        size="m"
        type="button"
      >
        Medium
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 buAJms"
    direction="column"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 eVoBs"
    >
      Large
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kygVIR"
        onClick={[Function]}
        size="l"
        type="button"
      >
        Large
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button with type modified 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Reset
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 dugpYI"
        onClick={[Function]}
        type="reset"
      >
        Reset
      </button>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      Submit
    </div>
    <div>
      <button
        className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 dugpYI"
        onClick={[Function]}
        type="submit"
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Button Button with variant 1`] = `
<button
  className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kEUmvh"
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Molecules | Button Default usage 1`] = `
<button
  className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 dugpYI"
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Molecules | Button Disabled button 1`] = `
<button
  className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 cWJwss"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Molecules | LabeledValue LabeledValue secondary currency 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 drexN"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 eNBnEP"
  >
    <span
      className="Text__StyledText-sc-1974afi-0 gdLuLT"
    >
      Market value
    </span>
  </div>
  <span
    className="Text__StyledText-sc-1974afi-0 gHlEVt"
  >
    SEK 4,672,198.00
  </span>
</div>
`;

exports[`Storyshots Molecules | LabeledValue LabeledValue title1 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 drexN"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 eNBnEP"
  >
    <span
      className="Text__StyledText-sc-1974afi-0 gdLuLT"
    >
      Holdings (SEK)
    </span>
  </div>
  <span
    className="Text__StyledText-sc-1974afi-0 iUYKst"
  >
    4713119
  </span>
</div>
`;

exports[`Storyshots Molecules | LabeledValue LabeledValue with negative development and currency 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 drexN"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 eNBnEP"
  >
    <span
      className="Text__StyledText-sc-1974afi-0 gdLuLT"
    >
      Development this year
    </span>
  </div>
  <div
    className="LabeledValuestories__StyledChildsContainer-sc-1raww2x-0 eEzclV"
  >
    <div
      className="LabeledValuestories__StyledDevContainer-sc-1raww2x-1 eLCfNR"
    >
      <span
        className="Text__StyledText-sc-1974afi-0 jWluYu"
      >
        ▼
        -9.2
        %
      </span>
    </div>
    <span
      className="Text__StyledText-sc-1974afi-0 gHlEVt"
    >
      -SEK 4,672,198.00
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | LabeledValue LabeledValue with positive development and currency 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 drexN"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 eNBnEP"
  >
    <span
      className="Text__StyledText-sc-1974afi-0 gdLuLT"
    >
      Development this year
    </span>
  </div>
  <div
    className="LabeledValuestories__StyledChildsContainer-sc-1raww2x-0 eEzclV"
  >
    <div
      className="LabeledValuestories__StyledDevContainer-sc-1raww2x-1 eLCfNR"
    >
      <span
        className="Text__StyledText-sc-1974afi-0 bmOtmq"
      >
        ▲
        +
        9.2
        %
      </span>
    </div>
    <span
      className="Text__StyledText-sc-1974afi-0 gHlEVt"
    >
      SEK 4,672,198.00
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules | Link Default usage 1`] = `
<a
  className="Link__StyledLink-apj04t-0 dJiWQG"
  href="/startpage"
  onClick={[Function]}
>
  <span
    className="Text__StyledText-sc-1974afi-0 bpEPBt"
  >
    Link
  </span>
</a>
`;

exports[`Storyshots Molecules | Link Link with _blank target 1`] = `
<a
  className="Link__StyledLink-apj04t-0 dJiWQG"
  href="/www.google.com"
  onClick={[Function]}
  target="_blank"
>
  <span
    className="Text__StyledText-sc-1974afi-0 bpEPBt"
  >
    Link
  </span>
</a>
`;

exports[`Storyshots Theme Colors 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      background
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 fBqExT"
        color="#F5F5F5"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      backgroundDark
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 gsWvMU"
        color="#282823"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      buttonSecondaryBackground
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 jCtZrB"
        color="#FFFFFF"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      buttonText
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 jCtZrB"
        color="#FFFFFF"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      buy
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 eVHow"
        color="#0046FF"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      card
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 jCtZrB"
        color="#FFFFFF"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      cta
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 eVHow"
        color="#0046FF"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      disabled
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 eHENBg"
        color="#D7D7D2"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      divider
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 kqeahF"
        color="#EBEBE8"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      label
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 hWriMt"
        color="#6E6E69"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      module
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 jCtZrB"
        color="#FFFFFF"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      negative
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 bkNmAu"
        color="#FF1900"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      positive
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 dAIMEK"
        color="#00D200"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      sell
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 bkNmAu"
        color="#FF1900"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      text
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 gsWvMU"
        color="#282823"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      textLight
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 jCtZrB"
        color="#FFFFFF"
      />
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      warning
    </div>
    <div>
      <div
        className="Themestories__Color-skwibd-0 iArkpu"
        color="#FFCF00"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Theme Screen sizes 1`] = `
<div
  className="Display__StyledFlexDiv-sc-1yo6rmg-0 fcTgTL"
  direction="column"
>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      xs
    </div>
    <div>
      <pre>
        360
      </pre>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      sm
    </div>
    <div>
      <pre>
        768
      </pre>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      md
    </div>
    <div>
      <pre>
        992
      </pre>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      lg
    </div>
    <div>
      <pre>
        1440
      </pre>
    </div>
  </div>
  <div
    className="Display__StyledFlexDiv-sc-1yo6rmg-0 hFANJJ"
    direction="row"
  >
    <div
      className="Display__DivWithBorder-sc-1yo6rmg-1 cmlFBm"
    >
      xl
    </div>
    <div>
      <pre>
        1680
      </pre>
    </div>
  </div>
</div>
`;
